--- a/index.html
+++ b/index.html
@@ -91,37 +91,46 @@
                     </div>
                 </div>
                 
-                <!-- Map Layer Filters -->
-                <div class="map-filters">
-                    <div class="filter-info">
-                        <i class="fas fa-filter"></i>
-                        <span>Katman Filtreleri:</span>
+                <!-- Map Layer Filters Info -->
+                <div class="map-filters-info">
+                    <div class="filter-instruction">
+                        <i class="fas fa-info-circle"></i>
+                        <div class="instruction-content">
+                            <strong>Katman Filtreleme Nasıl Yapılır:</strong>
+                            <p>Haritanın <strong>sol tarafındaki menüden</strong> katmanları açıp kapatabilirsiniz. Her katmanın yanındaki onay kutusuna tıklayarak o kategoriyi göster/gizle yapabilirsiniz.</p>
+                        </div>
                     </div>
-                    <div class="filter-buttons">
-                        <button class="filter-btn active" data-layer="all">
+                    <div class="layer-legend">
+                        <div class="legend-title">
                             <i class="fas fa-layer-group"></i>
-                            Tümü
-                        </button>
-                        <button class="filter-btn" data-layer="museums">
-                            <i class="fas fa-landmark"></i>
-                            Müzeler
-                        </button>
-                        <button class="filter-btn" data-layer="restaurants">
-                            <i class="fas fa-utensils"></i>
-                            Restoranlar
-                        </button>
-                        <button class="filter-btn" data-layer="attractions">
-                            <i class="fas fa-star"></i>
-                            Turistik Yerler
-                        </button>
-                        <button class="filter-btn" data-layer="parks">
-                            <i class="fas fa-tree"></i>
-                            Parklar
-                        </button>
-                        <button class="filter-btn" data-layer="shopping">
-                            <i class="fas fa-shopping-bag"></i>
-                            Alışveriş
-                        </button>
+                            <span>Harita Katmanları:</span>
+                        </div>
+                        <div class="legend-items">
+                            <div class="legend-item">
+                                <i class="fas fa-landmark" style="color: #e74c3c;"></i>
+                                <span>Müzeler & Kültür</span>
+                            </div>
+                            <div class="legend-item">
+                                <i class="fas fa-utensils" style="color: #f39c12;"></i>
+                                <span>Restoranlar & Kafeler</span>
+                            </div>
+                            <div class="legend-item">
+                                <i class="fas fa-star" style="color: #3498db;"></i>
+                                <span>Turistik Yerler</span>
+                            </div>
+                            <div class="legend-item">
+                                <i class="fas fa-tree" style="color: #27ae60;"></i>
+                                <span>Parklar & Doğa</span>
+                            </div>
+                            <div class="legend-item">
+                                <i class="fas fa-shopping-bag" style="color: #9b59b6;"></i>
+                                <span>Alışveriş Merkezleri</span>
+                            </div>
+                            <div class="legend-item">
+                                <i class="fas fa-subway" style="color: #34495e;"></i>
+                                <span>Ulaşım Noktaları</span>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 
