--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     <title>Londra Gezi Rehberi | London Travel Guide</title>
     
     <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FQH4RXGTLQ"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-        gtag('config', 'G-XXXXXXXXXX'); // Buraya kendi Google Analytics ID'nizi ekleyin
+        gtag('config', 'G-FQH4RXGTLQ');
     </script>
     
     <link rel="stylesheet" href="styles.css">
@@ -190,7 +190,7 @@
                                 <li><strong>Sonbahar (Eylül-Kasım):</strong> Kalabalık azalır, oteller daha uygun. 10-15°C.</li>
                                 <li><strong>Kış (Aralık-Şubat):</strong> Noel pazarları, buz pateni, daha az turist. 5-10°C.</li>
                             </ul>
-                            <p class="tip-note">💡 <strong>İpucu:</strong> Temmuz-Ağustos en kalabalık dönem. Haziran veya Eylül daha ideal.</p>
+                            <p class="tip-note"><strong>İpucu:</strong> Temmuz-Ağustos en kalabalık dönem. Haziran veya Eylül daha ideal.</p>
                         </div>
                     </div>
 
@@ -210,7 +210,7 @@
                                 <li><strong>Otobüsler:</strong> Manzaralı yolculuk, daha ucuz (£1.75 sabit)</li>
                                 <li><strong>Night Tube:</strong> Cuma-Cumartesi geceleri bazı hatlarda 24 saat</li>
                             </ul>
-                            <p class="tip-note">💡 <strong>İpucu:</strong> TfL Go uygulamasını indirin - gerçek zamanlı bilgi ve rota planlama.</p>
+                            <p class="tip-note"><strong>İpucu:</strong> TfL Go uygulamasını indirin - gerçek zamanlı bilgi ve rota planlama.</p>
                         </div>
                     </div>
 
@@ -229,7 +229,7 @@
                                 <li><strong>Önceden Rezervasyon:</strong> Tower of London, London Eye gibi yerlerde %15-20 indirim</li>
                                 <li><strong>Matine Gösterileri:</strong> West End tiyatrolarında öğleden sonra gösterileri daha ucuz</li>
                             </ul>
-                            <p class="tip-note">💡 <strong>İpucu:</strong> Çarşamba günleri bazı müzelerde geç saatlere kadar açık ve daha az kalabalık.</p>
+                            <p class="tip-note"><strong>İpucu:</strong> Çarşamba günleri bazı müzelerde geç saatlere kadar açık ve daha az kalabalık.</p>
                         </div>
                     </div>
 
@@ -248,7 +248,7 @@
                                 <li><strong>Yağmurluk:</strong> Şemsiyeden daha pratik, rüzgarlı günlerde daha kullanışlı</li>
                                 <li><strong>Güneş Kremi:</strong> Yaz aylarında güneş sürpriz şekilde güçlü olabilir</li>
                             </ul>
-                            <p class="tip-note">💡 <strong>İpucu:</strong> Met Office uygulamasını indirin - en doğru hava tahminleri.</p>
+                            <p class="tip-note"><strong>İpucu:</strong> Met Office uygulamasını indirin - en doğru hava tahminleri.</p>
                         </div>
                     </div>
 
@@ -268,7 +268,7 @@
                                 <li><strong>Curry:</strong> Brick Lane'de otantik Hint mutfağı</li>
                                 <li><strong>Street Food:</strong> Camden Market, Southbank - uygun fiyatlı seçenekler</li>
                             </ul>
-                            <p class="tip-note">💡 <strong>İpucu:</strong> Öğle yemeği menüleri akşam yemeğinden %30-40 daha ucuz!</p>
+                            <p class="tip-note"><strong>İpucu:</strong> Öğle yemeği menüleri akşam yemeğinden %30-40 daha ucuz!</p>
                         </div>
                     </div>
 
@@ -289,7 +289,7 @@
                                 <li><strong>Su:</strong> Musluk suyu içilebilir ve ücretsiz</li>
                                 <li><strong>WiFi:</strong> Çoğu kafe, restoran ve metro istasyonlarında ücretsiz</li>
                             </ul>
-                            <p class="tip-note">💡 <strong>İpucu:</strong> NHS (Sağlık Hizmetleri) acil durumlarda ücretsiz, ancak seyahat sigortası yaptırın.</p>
+                            <p class="tip-note"><strong>İpucu:</strong> NHS (Sağlık Hizmetleri) acil durumlarda ücretsiz, ancak seyahat sigortası yaptırın.</p>
                         </div>
                     </div>
 
@@ -308,7 +308,7 @@
                                 <li><strong>4. Gün - Parklar ve Alışveriş:</strong> Hyde Park, Harrods, Oxford Street, Camden Market</li>
                                 <li><strong>5. Gün - Alternatif Londra:</strong> Notting Hill, Portobello Market, Shoreditch, Brick Lane</li>
                             </ul>
-                            <p class="tip-note">💡 <strong>İpucu:</strong> Sabah erken başlayın - popüler yerler 10:00'dan sonra çok kalabalık oluyor.</p>
+                            <p class="tip-note"><strong>İpucu:</strong> Sabah erken başlayın - popüler yerler 10:00'dan sonra çok kalabalık oluyor.</p>
                         </div>
                     </div>
 
@@ -329,7 +329,7 @@
                                 <li><strong>Time Out London:</strong> Etkinlik ve aktivite önerileri</li>
                                 <li><strong>Met Office:</strong> Hava durumu</li>
                             </ul>
-                            <p class="tip-note">💡 <strong>İpucu:</strong> Havalimanında SIM kart alın veya eSIM kullanın - veri paketi şart!</p>
+                            <p class="tip-note"><strong>İpucu:</strong> Havalimanında SIM kart alın veya eSIM kullanın - veri paketi şart!</p>
                         </div>
                     </div>
                 </div>
