Template desing edit

--- a/index.html
+++ b/index.html
@@ -175,6 +175,14 @@
                             <i class="fas fa-shopping-bag"></i>
                             <span>Alışveriş</span>
                         </button>
+                        <button class="filter-btn" data-category="entertainment">
+                            <i class="fas fa-music"></i>
+                            <span>Eğlence Mekanları</span>
+                        </button>
+                        <button class="filter-btn" data-category="cafes">
+                            <i class="fas fa-coffee"></i>
+                            <span>Kahveciler</span>
+                        </button>
                     </div>
                 </div>
                 
