Template desing edit

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="Londra Gezi Rehberi">
     <meta property="og:description" content="Londra'da gezilecek en güzel yerler ve önerilen rotalar">
     
-    <!-- Twitter -->
+    <!-- X (formerly Twitter) -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:title" content="Londra Gezi Rehberi">
     
@@ -389,8 +389,8 @@
                         Facebook
                     </button>
                     <button class="share-btn twitter" onclick="shareOn('twitter')">
-                        <i class="fab fa-twitter"></i>
-                        Twitter
+                        <i class="fab fa-x-twitter"></i>
+                        X
                     </button>
                     <button class="share-btn whatsapp" onclick="shareOn('whatsapp')">
                         <i class="fab fa-whatsapp"></i>
